# MNOGLA

./: .gitignore  MNOGLA.cpp  MNOGLA.h  README.md
3rdPartyLicense/: .gitignore  freetype-VER-2-13-0.tar.bz2  unpack.sh
AndroidStudio/app/: build.gradle
AndroidStudio/app/src/main/: AndroidManifest.xml
AndroidStudio/app/src/main/cpp/: CMakeLists.txt  host.cpp
AndroidStudio/app/src/main/java/com/android/MNOGLAJNI/: MNOGLAActivity.java  MNOGLALIB.java
core/: MNOGLA.cpp  MNOGLA_includeGl.h  MNOGLA_util.cpp  MNOGLA_util.h  MNOGLA_utilInternal.cpp  MNOGLA_utilInternal.h  util_drawText.cpp  util_filledRect.cpp  util_filledRect.h  util_outlinedRect.h
core/src/: filledRect.cpp  filledRectInternal.h  outlinedRect.cpp  outlinedRectInternal.h  rowmans.h  twoDShape.cpp  twoDShape.h  vectorText.cpp
gui/: code.cpp  guiButton.hpp  guiContainer.h  guiElem.hpp
gui/internal/: guiButton.hpp  guiButton_internal.h  guiContainerInternal.h  guiContainer_internal.h  guiElem_internal.hpp  rezoomer.hpp
host_AndroidStudio/app/src/main/cpp/: CMakeLists.txt  host.cpp
host_AndroidStudio/app/src/main/java/com/android/MNOGLAJNI/: MNOGLAActivity.java  MNOGLALIB.java  MNOGLAView.java
host_AndroidStudio/app/src/main/res/values/: strings.xml
host_mingw64linux/: CMakeLists.txt  Makefile  build_mingwOrLinux.sh  clean.sh  host.cpp  main.cpp  mingwInstallPackages.sh
mingw64/: Makefile  main.cpp
misc/: UTF8_tokenizer.hpp
twoD/: code.cpp  twoDMatrix.h  twoDView.h
twoD/internal/: filledRect.cpp  filledRect.h  fontAtlas.cpp  fontAtlas.h  outlinedRect.cpp  outlinedRect.h  textureText.cpp  textureText.h  textureText.hpp  twoDMatrix.cpp  twoDShape.cpp  twoDShape.h  twoDView.cpp  twoDView_internal.h  vectorText.cpp  vectorText.h
uiEvtListener/: README.md  code.cpp  ptrEvtListener.h  ptrEvtListenerConfig.h  rawMouseEvtListener.h  rawTouchEvtListener.h
uiEvtListener/src/: ptrEvtListener.cpp  ptrEvtListener_internal.h  rawMouseEvtListener.cpp  rawMouseEvtListener_internal.h  rawTouchEvtListener.cpp  rawTouchEvtListener_internal.h
userApp/: synth.hpp  userApp.cpp
userApp/odsLoader/: odsLoader.hpp
userApp/odsLoader/tinyxml2/: tinyxml2.h
userApp/synth/: audiobook.hpp  hello.ods  midisynth.hpp  pattern.hpp  synth.hpp  track.hpp
userApp1/: switchToApp.sh  userApp.cpp
userApp1/buildFiles/: android_CMakeLists.txt  mingw64linux_CMakeLists.txt
userApp1/synth/: polysynth.hpp  score.mscx  synth.hpp
userApp2/: multilineText.hpp  userApp.cpp
userApp2/buildFiles/: android_CMakeLists.txt  mingw64linux_CMakeLists.txt
util/: util.hpp
